[package]
name = "twyngled"
description = "A specialised terminal Twine client for playing online MUDs"
readme = "README.md"
version = "0.0.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/twyngled"
documentation = "https://docs.rs/twyngled/"
categories = ["clients"]
keywords = ["games", "ascii", "IF", "MUDs", "MUSHes"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "twyg"

[dependencies]
twyg = "0.1.10"
tui = "0.19.0"

[[example]]
name = "demo"
