[package]
name = "twyngled"
description = "A specialised terminal Twine client for playing online MUDs"
readme = "README.md"
version = "0.1.0-dev"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/twyngled"
documentation = "https://docs.rs/twyngled/"
categories = ["games", "web-programming::http-client", "command-line-interface"]
keywords = ["ascii", "IF", "MUDs", "MUSHes", "terminal"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "twyngled"

[dependencies]
serde_json = "1.0"
tui = "0.19.0"
twyg = "0.1.10"
twyne = "0.1.0"

[[example]]
name = "demo"
